# octopusai

./: .env.sample  .gitignore  README.md  bug_detection_flow.html  pyproject.toml
docs/: BUG_DETECTION.md
octopusai/: cli.py
octopusai/commands/: bug_detection_command.py
octopusai/crews/: bug_detection_crew.py  bug_detection_flow.py  bug_detection_hierarchical.py
octopusai/tools/: code_interpreter_with_timeout.py  directory_read.py  git_clone.py  git_tool.py  langchain_github.py
src/fastslug/: __init__.py  bug_detection_crew.py
src/fastslug/config/: tasks.yaml
src/fastslug/tools/: git_clone.py
src/octopusai/: __init__.py  bug_report.md
src/octopusai/config/: agents.yaml
