[project]
name = "fastslug"
version = "0.1.0"
description = "Fast and powerful AI Agents"
readme = "README.md"
authors = [
    { name = "Kun Pang", email = "pkunray@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
fastslug = "fastslug:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastslug"]
